syntax = "proto3";

// options for Java generated sources
option java_multiple_files = true;
option java_package = "com.thinhda.spring.grpc.core.model";


package sms.core;

message CreateFollowPostRequest{
  string token =1;
}

message CreatePostResponse{
  bool created = 1;
}

message CreateStarRepoPostRequest{
  string token =1;
  string repoName=2;
}

service CreatePostService{
  rpc createFollowPost(CreateFollowPostRequest) returns(CreatePostResponse);
  rpc createStarRepoPost(CreateStarRepoPostRequest) returns(CreatePostResponse);
}